--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.1",
     "@mui/base": "^5.0.0-beta.37",
+    "@mui/icons-material": "^5.15.12",
     "next": "14.1.2",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
