--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
     "@heroicons/react": "^2.1.1",
     "@mui/base": "^5.0.0-beta.37",
     "@mui/icons-material": "^5.15.12",
