--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.1.1",
     "@mui/base": "^5.0.0-beta.37",
     "@mui/icons-material": "^5.15.12",
