--- a/my-app/package.json
+++ b/my-app/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.1.1",
     "@mui/base": "^5.0.0-beta.37",
     "@mui/icons-material": "^5.15.12",
+    "axios": "^1.6.7",
     "next": "14.1.2",
     "react": "^18",
     "react-dom": "^18"
