--- a/my-app/package.json
+++ b/my-app/package.json
@@ -12,9 +12,11 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.1.1",
+    "@microlink/mql": "^0.12.3",
     "@mui/base": "^5.0.0-beta.37",
     "@mui/icons-material": "^5.15.12",
     "axios": "^1.6.7",
+    "http-proxy-middleware": "^2.0.6",
     "next": "14.1.2",
     "react": "^18",
     "react-dom": "^18"
