--- a/my-app/package.json
+++ b/my-app/package.json
@@ -19,7 +19,9 @@
     "http-proxy-middleware": "^2.0.6",
     "next": "14.1.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
