--- a/my-app/package.json
+++ b/my-app/package.json
@@ -15,6 +15,7 @@
     "@microlink/mql": "^0.12.3",
     "@mui/base": "^5.0.0-beta.37",
     "@mui/icons-material": "^5.15.12",
+    "@types/react-slick": "^0.23.13",
     "axios": "^1.6.7",
     "http-proxy-middleware": "^2.0.6",
     "next": "14.1.2",
