--- a/my-app/package.json
+++ b/my-app/package.json
@@ -23,6 +23,7 @@
     "next": "14.1.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-query": "^3.39.3",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1"
   },
