[Fix] 컴포넌트 분리중

--- a/my-app/.eslintrc.json
+++ b/my-app/.eslintrc.json
@@ -1,6 +1,40 @@
+/* eslint 찾아보기 */
 {
-  "extends": "next/core-web-vitals",
-  "rules" : {
-    "@next/next/no-img-element" : "off"
-  }
+    "env": {
+        "browser": true,
+        "es6": true,
+        "node": true
+    },
+    "parser": "babel-eslint",
+    "extends": [
+        "next/core-web-vitals",
+        "eslint:recommended",
+        "plugin:react/recommended",
+        "airbnb",
+        "plugin:prettier/recommended"
+    ],
+    "settings": {
+        "react": {
+            "version": "detect"
+        }
+    },
+    "parserOptions": {
+        "ecmaFeatures": {
+            "jsx": true
+        },
+        "ecmaVersion": 2018,
+        "sourceType": "module"
+    },
+    "plugins": ["react", "react-hooks", "prettier"],
+    "rules": {
+        "react/react-in-jsx-scope": 0,
+        "react/prefer-stateless-function": 0,
+        "react/jsx-filename-extension": 0,
+        "react/jsx-one-expression-per-line": 0,
+        "no-nested-ternary": 0,
+        "@next/next/no-img-element": "off"
+    },
+    "globals": {
+        "React": "writable"
+    }
 }
